<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>


    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.myapplication.ui.settings.view.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings">

    </fragment>
    <fragment
        android:id="@+id/nav_fav"
        android:name="com.example.myapplication.ui.favourites.view.FavFragment"
        android:label="@string/menu_fav"/>


    <fragment
        android:id="@+id/nav_alert"
        android:name="com.example.myapplication.ui.alert.view.AlertFragment"
        android:label="Alert"
        tools:layout="@layout/fragment_alert" />

    <fragment
        android:id="@+id/favDetailsFragment"
        android:name="com.example.myapplication.ui.favourites.view.FavDetailsFragment"
        android:label="Fav Details"
        tools:layout="@layout/fav_details_fragment" />

</navigation>