<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background2"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/alert_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_range_connector"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/snooze_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snooze_button"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/alert_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/stop_button" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_button"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/alert_time"
            app:layout_constraintStart_toEndOf="@id/snooze_button"
            app:layout_constraintEnd_toStartOf="@id/delete_button" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/alert_time"
            app:layout_constraintStart_toEndOf="@id/stop_button"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>