<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:fillViewport="true"
    tools:context="com.example.myapplication.ui.home.view.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="506dp"
            android:background="@android:color/transparent"
            android:orientation="vertical"

            android:padding="16dp">

            <!-- Top weather info -->
            <TextView
                android:id="@+id/tvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="City Name" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    tools:text="May 18, 2025" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    tools:text="14:43" />
            </LinearLayout>


            <ImageView
                android:id="@+id/ivWeatherIcon"
                android:layout_width="150dp"
                android:layout_height="178dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/weather_icon_desc"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:text="25°C" />

            <TextView
                android:id="@+id/tvWeatherDisc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                tools:text="Clear Sky" />

            <!-- Weather details -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:background="@drawable/background2"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <!-- Pressure -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/pressure_label"
                        android:src="@drawable/barometer" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/pressure_label"
                        android:textColor="#B0BEC5"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="1021 hPa" />
                </LinearLayout>

                <!-- Humidity -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/humidity_label"
                        android:src="@drawable/humidity" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/humidity_label"
                        android:textColor="#B0BEC5"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="77%" />
                </LinearLayout>

                <!-- Wind -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/wind_label"
                        android:src="@drawable/wind" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/wind_label"
                        android:textColor="#B0BEC5"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="2.06 m/s" />
                </LinearLayout>

                <!-- Clouds -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/cloud_label"
                        android:src="@drawable/cloud" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/cloud_label"
                        android:textColor="#B0BEC5"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvClouds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="0%" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- Forecasts -->
        <TextView
            android:id="@+id/tv_hourly_forecast_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hourly_forecast_label"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHourlyForecast"
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            tools:listitem="@layout/item_hourly_forecast" />

        <TextView
            android:id="@+id/tv_daily_forecast_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/daily_forecast_label"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDailyForecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            tools:listitem="@layout/item_daily_forecast" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
